<resources>
    <string name="ots_name">OTS</string>
    <string name="app_name">OTS</string>
    <string name="user_name">Enter UserName</string>
    <string name="password_field">Enter Password</string>
    <string name="phone_field">Phone</string>

    <string name="title_activity_create_team">CreateTeamActivity</string>
    <string name="settings">settings</string>
    <string name="manage">Manage team</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="create_team_text">Create team</string>
    <string name="team_name">Team name</string>
    <string name="about">About</string>

    <string name="all_tasks_list">ALL TASKS</string>
    <string name="waiting_tasks_list">WAITING TASKS</string>


    <string name="waiting_tasks_counter_label">Tasks: </string>

    <string name="team_name_text">Team Name</string>
    <string name="members">Member number:\t</string>
    <string name="member_name">Member Name</string>
    <string name="member_mail">Member Mail</string>
    <string name="memeber_phone">Member Phone</string>
    <string name="send">send</string>
    <string name="update_list">UPDATE</string>

    <string name="new_task_dialog_message">You have received a new message</string>
    <string name="cancel">CANCEL</string>
    <string name="view_task">VIEW TASK</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_category">Task catrgory:</string>
    <string name="cleaning">cleaning</string>
    <string name="electricity">electricity</string>
    <string name="computers">computers</string>
    <string name="general">general</string>
    <string name="other">other</string>
    <string name="task_priority">Task priority:</string>
    <string name="low">Low</string>
    <string name="normal">Normal</string>
    <string name="urgent">High</string>
    <string name="logout">log out</string>
    <string name="task_info">Task Info</string>
    <string name="category_label">category:</string>
    <string name="priority_label">Priority:</string>
    <string name="location_label">Location:</string>
    <string name="due_date">Due Date:</string>
    <string name="status">Status</string>
    <string name="accept_status_label">accept:</string>
    <string name="accept">Accept</string>
    <string name="status_label">status: </string>
    <string name="add_photo">add photo</string>
    <string name="save">save</string>
    <string name="log_in">Log In</string>
    <string name="manage_team_text">Manage Team</string>
    <string name="add">Add</string>
    <string name="add_members">Add members</string>
    <string name="settings_text">settings</string>
    <string name="update_every">update every:</string>
    <string name="seconds">seconds</string>
    <string name="about_text">About</string>
    <string name="created_by">Created By:</string>
    <string name="version_text">Version:</string>
    <string name="app_version">1.0</string>
    <string name="tasks">tasks</string>
    <string name="sign_up">Sign Up</string>
    <string name="admin_notice">Welcome back Admin</string>

    <string-array name="arrange_by">
        <item>Status</item>
        <item>Priority</item>
        <item>Due Date</item>
    </string-array>
    <string name="manageYourTeam">ManageTeamActivity</string>
    <string name="yourTeamMem">Team players</string>
    <string name="no_task">no tasks</string>

</resources>
