<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.ReportTaskActivity">

    <TextView
        android:id="@+id/reportTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_info"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:layout_marginLeft="120dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/taskCategoryInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_label"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/taskCategoryInfoVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="2dp">

        <TextView
            android:id="@+id/taskPrio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_label"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/taskPrioVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="2dp">

        <TextView
            android:id="@+id/taskLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_label"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/taskLocationVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="2dp">

        <TextView
            android:id="@+id/taskDueTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/taskDueTimeVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_status_label"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/acceptStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#c5c2c2" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/acceptStatusVal"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_label"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/acceptStatusAnswear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/addPhoto"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_marginTop="40dp"
            android:layout_weight="1.28">



            <ImageView
                android:id="@+id/viewImageFromButton"
                android:layout_width="61dp"
                android:layout_height="61dp"
                android:src="@drawable/info_icon"
                android:scaleType="fitXY"
                android:layout_gravity="right"
                android:adjustViewBounds="true"
                android:layout_marginRight="140dp"
                android:background="#d2d2d2" />


        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveButton"
        android:onClick="saveClicked"
        android:layout_marginTop="15dp" />

</LinearLayout>

