<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.ots.activities.LoginActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_logo"
        android:background="@null"
        android:id="@+id/imageLogo"
        android:layout_marginBottom="63dp"
        android:layout_above="@+id/appName"
        android:layout_alignLeft="@+id/userName"
        android:layout_alignStart="@+id/userName" />

    <TextView
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:id="@+id/admin"
        android:layout_below="@+id/appName"
        android:layout_alignRight="@+id/signIn"
        android:layout_alignEnd="@+id/signIn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="30dp"
        android:id="@+id/appName"
        android:layout_above="@+id/userName"
        android:layout_centerHorizontal="true" />

    <EditText
        android:singleLine="true"
        android:gravity="center"
        android:hint="@string/user_name"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:id="@+id/userName"
        android:background="#ffffff"
        android:layout_above="@+id/pass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp" />

    <EditText
        android:inputType="textPassword"
        android:singleLine="true"
        android:gravity="center"
        android:hint="@string/password_field"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:id="@+id/pass"
        android:background="#ffffff"
        android:layout_above="@+id/signIn"
        android:layout_alignLeft="@+id/userName"
        android:layout_alignStart="@+id/userName"
        android:layout_marginBottom="26dp" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:id="@+id/signIn"
        android:layout_marginBottom="30dp"
        android:background="#8d969e"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/pass"
        android:layout_alignStart="@+id/pass"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />




</RelativeLayout>
