<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activities.WaitingTasksActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">


        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/waiting_tasks_list"
            android:id="@+id/waitListTab"
            android:layout_weight="0.5"
            android:contextClickable="false"
            android:textColor="#ffffff"
            android:onClick="moveToWaitingTasks" />

        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/all_tasks_list"
            android:id="@+id/allTasksTab"
            android:layout_weight="0.5"
            android:onClick="moveToAllTasks" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/tasksFilter">
        
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/taskSpinner"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waiting_tasks_counter_label"
                android:id="@+id/waitListCount" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/waitListCounter" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/no_task"
            android:visibility="gone"
            android:id="@+id/emptyTask"
            android:layout_gravity="center_horizontal" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout_waiting_list"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_vertical">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/task_list_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="false"
                android:onClick="addNewTaskButtonClicked" />
        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout">

    <Button
        android:layout_width="138dp"
        android:layout_height="71dp"
        android:text="Add"
        android:id="@+id/add_task_button"
        android:onClick="addNewTaskButtonClicked"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="0.23"
        android:layout_marginLeft="18dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/update_button"
        android:text="update"
        android:onClick="refreshListButtonClicked"
        android:layout_weight="0.65"
        android:layout_marginLeft="35dp" />
    </LinearLayout>

</LinearLayout>
